@@ -7,6 +7,8 @@
 
 package org.elasticsearch.xpack.esql.action;
 
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.core.LogEvent;
 import org.apache.lucene.search.DocIdSetIterator;
 import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.action.ActionFuture;
@@ -14,12 +16,15 @@ import org.elasticsearch.action.admin.cluster.node.tasks.cancel.CancelTasksReque
 import org.elasticsearch.action.admin.cluster.node.tasks.cancel.TransportCancelTasksAction;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.collect.Iterators;
+import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.CollectionUtils;
 import org.elasticsearch.common.util.concurrent.AbstractRunnable;
 import org.elasticsearch.compute.lucene.LuceneSourceOperator;
 import org.elasticsearch.compute.lucene.read.ValuesSourceReaderOperatorStatus;
+import org.elasticsearch.compute.operator.Driver;
 import org.elasticsearch.compute.operator.DriverStatus;
 import org.elasticsearch.compute.operator.DriverTaskRunner;
 import org.elasticsearch.compute.operator.OperatorStatus;
@@ -38,9 +43,12 @@ import org.elasticsearch.test.transport.MockTransportService;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xpack.esql.EsqlTestUtils;
+import org.elasticsearch.xpack.esql.MockAppender;
 import org.elasticsearch.xpack.esql.plugin.QueryPragmas;
 import org.hamcrest.Matcher;
+import org.junit.AfterClass;
 import org.junit.Before;
+import org.junit.BeforeClass;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -52,6 +60,7 @@ import java.util.concurrent.TimeUnit;
 
 import static org.elasticsearch.test.MapMatcher.assertMap;
 import static org.elasticsearch.test.MapMatcher.matchesMap;
+import static org.elasticsearch.xpack.esql.action.EsqlQueryRequest.syncEsqlQueryRequest;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.both;
 import static org.hamcrest.Matchers.containsString;
@@ -65,6 +74,7 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.in;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.startsWith;
 
 /**
  * Tests that we expose a reasonable task status.
@@ -77,7 +87,26 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
 
     private static final Logger LOGGER = LogManager.getLogger(EsqlActionTaskIT.class);
 
-    private boolean nodeLevelReduction;
+    static MockAppender driverMockAppender;
+    static org.apache.logging.log4j.Logger driverLog = org.apache.logging.log4j.LogManager.getLogger(Driver.class);
+    static Level origDriverLogLevel = driverLog.getLevel();
+
+    @BeforeClass
+    public static void init() throws IllegalAccessException {
+        driverMockAppender = new MockAppender("mock_appender");
+        driverMockAppender.start();
+        Loggers.addAppender(driverLog, driverMockAppender);
+        Loggers.setLevel(driverLog, Level.DEBUG);
+    }
+
+    @AfterClass
+    public static void cleanup() {
+        Loggers.removeAppender(driverLog, driverMockAppender);
+        driverMockAppender.stop();
+        Loggers.setLevel(driverLog, origDriverLogLevel);
+    }
+
+    private Boolean nodeLevelReduction;
 
     /**
      * Number of docs released by {@link #startEsql}.
@@ -87,7 +116,6 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
     @Before
     public void setup() {
         assumeTrue("requires query pragmas", canUseQueryPragmas());
-        nodeLevelReduction = randomBoolean();
     }
 
     public void testTaskContents() throws Exception {
@@ -214,6 +242,7 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         } finally {
             scriptPermits.release(numberOfDocs());
         }
+        assertCancelledLog();
     }
 
     public void testCancelMerge() throws Exception {
@@ -226,6 +255,7 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         } finally {
             scriptPermits.release(numberOfDocs());
         }
+        assertCancelledLog();
     }
 
     public void testCancelEsqlTask() throws Exception {
@@ -244,6 +274,14 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         } finally {
             scriptPermits.release(numberOfDocs());
         }
+        assertCancelledLog();
+    }
+
+    private void assertCancelledLog() {
+        LogEvent event = driverMockAppender.getLastEventAndReset();
+        assertThat(event.getLevel(), equalTo(Level.DEBUG));
+        assertThat(event.getMessage().getFormattedMessage(), startsWith("Cancelling running driver ["));
+        assertThat(event.getThrown().getClass(), equalTo(TaskCancelledException.class));
     }
 
     private ActionFuture<EsqlQueryResponse> startEsql() {
@@ -267,6 +305,9 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
             // Report the status after every action
             .put("status_interval", "0ms");
 
+        if (nodeLevelReduction == null) {
+            nodeLevelReduction = randomBoolean();
+        }
         if (nodeLevelReduction) {
             // explicitly set the default (true) or don't
             if (randomBoolean()) {
@@ -276,8 +317,7 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
             settingsBuilder.put("node_level_reduction", false);
         }
 
-        var pragmas = new QueryPragmas(settingsBuilder.build());
-        return EsqlQueryRequestBuilder.newSyncEsqlQueryRequestBuilder(client()).query(query).pragmas(pragmas).execute();
+        return client().execute(EsqlQueryAction.INSTANCE, syncEsqlQueryRequest(query).pragmas(new QueryPragmas(settingsBuilder.build())));
     }
 
     private void cancelTask(TaskId taskId) {
@@ -441,16 +481,13 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         try {
             scriptPermits.release(numberOfDocs()); // do not block Lucene operators
             Client client = client(coordinator);
-            EsqlQueryRequest request = EsqlQueryRequest.syncEsqlQueryRequest();
             client().admin()
                 .indices()
                 .prepareUpdateSettings("test")
                 .setSettings(Settings.builder().put("index.routing.allocation.include._name", dataNode).build())
                 .get();
             ensureYellowAndNoInitializingShards("test");
-            request.query("FROM test | LIMIT 10");
-            QueryPragmas pragmas = randomPragmas();
-            request.pragmas(pragmas);
+            EsqlQueryRequest request = syncEsqlQueryRequest("FROM test | LIMIT 10").pragmas(randomPragmas());
             PlainActionFuture<EsqlQueryResponse> future = new PlainActionFuture<>();
             client.execute(EsqlQueryAction.INSTANCE, request, future);
             ExchangeService exchangeService = internalCluster().getInstance(ExchangeService.class, dataNode);
@@ -506,12 +543,30 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         }
     }
 
-    public void testTaskContentsForTopNQuery() throws Exception {
+    public void testTaskContentsForTopNQueryWithNoReduction() throws Exception {
+        testTaskContentsForTopNQueryWithReductionHelper(false);
+    }
+
+    public void testTaskContentsForTopNQueryWithReduction() throws Exception {
+        testTaskContentsForTopNQueryWithReductionHelper(true);
+    }
+
+    private void testTaskContentsForTopNQueryWithReductionHelper(boolean nodeLevelReduction) throws Exception {
+        this.nodeLevelReduction = nodeLevelReduction;
+        var dataNodeProjectString = nodeLevelReduction ? "0, 1" : "1";
+        var nodeReduceString = nodeLevelReduction
+            ? """
+                \\_TopNOperator[count=1000, elementTypes=[DOC, LONG], encoders=[DocVectorEncoder, DefaultSortable], \
+                sortOrders=[SortOrder[channel=1, asc=true, nullsFirst=false]]]
+                \\_ProjectOperator[projection = [1]]
+                """
+            : "\\_TopNOperator[count=1000, elementTypes=[LONG], encoders=[DefaultSortable], "
+                + "sortOrders=[SortOrder[channel=0, asc=true, nullsFirst=false]]]\n";
         ActionFuture<EsqlQueryResponse> response = startEsql("from test | sort pause_me | keep pause_me");
         try {
             getTasksStarting();
             logger.info("unblocking script");
-            scriptPermits.release(pageSize());
+            scriptPermits.release(numberOfDocs() + pageSize());
             List<TaskInfo> tasks = getTasksRunning();
             String sortStatus = """
                 [{"pause_me":{"order":"asc","missing":"_last","unmapped_type":"long"}}]""";
@@ -519,29 +574,23 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
                 + pageSize()
                 + ", limit = 1000, needsScore = false, sorts = "
                 + sortStatus;
-            assertThat(dataTasks(tasks).get(0).description(), equalTo("""
-                \\_LuceneTopNSourceOperator[sourceStatus]
+            assertThat(dataTasks(tasks).getFirst().description(), equalTo(Strings.format("""
+                \\_LuceneTopNSourceOperator[%s]
                 \\_ValuesSourceReaderOperator[fields = [pause_me]]
-                \\_ProjectOperator[projection = [1]]
-                \\_ExchangeSinkOperator""".replace("sourceStatus", sourceStatus)));
+                \\_ProjectOperator[projection = [%s]]
+                \\_ExchangeSinkOperator""", sourceStatus, dataNodeProjectString)));
             assertThat(
-                nodeReduceTasks(tasks).get(0).description(),
-                nodeLevelReduceDescriptionMatcher(
-                    tasks,
-                    "\\_TopNOperator[count=1000, elementTypes=[LONG], encoders=[DefaultSortable], "
-                        + "sortOrders=[SortOrder[channel=0, asc=true, nullsFirst=false]]]\n"
-                )
+                nodeReduceTasks(tasks).getFirst().description(),
+                nodeLevelReduction
+                    ? nodeLevelReduceDescriptionMatcher(nodeReduceString)
+                    : nodeLevelReduceDescriptionMatcher(tasks, nodeReduceString)
             );
-            assertThat(
-                coordinatorTasks(tasks).get(0).description(),
-                equalTo(
-                    "\\_ExchangeSourceOperator[]\n"
-                        + "\\_TopNOperator[count=1000, elementTypes=[LONG], encoders=[DefaultSortable], "
-                        + "sortOrders=[SortOrder[channel=0, asc=true, nullsFirst=false]]]\n"
-                        + "\\_ProjectOperator[projection = [0]]\n"
-                        + "\\_OutputOperator[columns = [pause_me]]"
-                )
-            );
+            assertThat(coordinatorTasks(tasks).getFirst().description(), equalTo("""
+                \\_ExchangeSourceOperator[]
+                \\_TopNOperator[count=1000, elementTypes=[LONG], encoders=[DefaultSortable], \
+                sortOrders=[SortOrder[channel=0, asc=true, nullsFirst=false]]]
+                \\_ProjectOperator[projection = [0]]
+                \\_OutputOperator[columns = [pause_me]]"""));
         } finally {
             // each scripted field "emit" is called by LuceneTopNSourceOperator and by ValuesSourceReaderOperator
             scriptPermits.release(2 * numberOfDocs());
@@ -627,7 +676,12 @@ public class EsqlActionTaskIT extends AbstractPausableIntegTestCase {
         boolean matchNodeReduction = nodeLevelReduction
             // If the data node and the coordinator are the same node then we don't reduce aggs in it.
             && false == dataTasks(tasks).get(0).node().equals(coordinatorTasks(tasks).get(0).node());
-        return equalTo("\\_ExchangeSourceOperator[]\n" + (matchNodeReduction ? nodeReduce : "") + "\\_ExchangeSinkOperator");
+        return nodeLevelReduceDescriptionMatcher(matchNodeReduction ? nodeReduce : "");
+    }
+
+    /** Unlike the above, will always use the {@code nodeReduce} string. */
+    private static Matcher<String> nodeLevelReduceDescriptionMatcher(String nodeReduce) {
+        return equalTo("\\_ExchangeSourceOperator[]\n" + nodeReduce + "\\_ExchangeSinkOperator");
     }
 
     @Override
